--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "astro-dark-theme",
     "displayName": "Customized JetBrains Dark Theme",
     "description": "A VS Code theme converted from JetBrains' Dark color scheme",
+    "icon": "media/theme-icon.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/jensastrup/astro-dark-theme"
