--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "type": "git",
         "url": "https://github.com/jensastrup/astro-dark-theme"
     },
-    "version": "0.0.2",
+    "version": "0.0.3",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.60.0"
     },
@@ -28,7 +29,8 @@
         "themes",
         "README.md",
         "package.json",
-        "media"
+        "media",
+        "LICENSE"
     ],
     "vscodeignore": [
         ".vscode/**",
